k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: podx-server
  labels:
    app: podx-server
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: podx-server
